Do not ignore any regex errors

--- a/locale/en/messages.po
+++ b/locale/en/messages.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-11-18 16:14+0000\n"
+"POT-Creation-Date: 2020-11-18 16:47+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -26,7 +26,7 @@ msgid "_spec.description"
 msgstr "Create a column of labels for rows that match conditions."
 
 msgid "_spec.parameters.colname.name"
-msgstr "Create column with name"
+msgstr "Output column"
 
 msgid "_spec.parameters.labels.child_parameters.value.name"
 msgstr "Label"
